--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,5 +40,19 @@ body {
 
 .icons {
     font-size: 40px;
-   color:#FB607F
+    color:#FB607F
+
+}
+
+.gitLink {
+  border: 1px solid black;
+  border-radius: 15px;
+  /* background-color: ; */
+  color: white;
+  margin: 0% 3%;
+  padding: .5%;
+}
+
+.gitLink:hover {
+  box-shadow: 2px 2px 10px #FB607F;
 }
