--- a/client/src/components/Nav/index.css
+++ b/client/src/components/Nav/index.css
@@ -8,6 +8,11 @@
   cursor: pointer;
 }
 
+.navbar-style {
+  justify-content:space-between;
+  padding: 20px 10px;
+}
+
 .navbar-style:hover {
   border-bottom: 3px solid #FB607F;
   padding-bottom: 1.75px;
@@ -16,7 +21,7 @@
 .donate-btn {
   background-color: #FB607F;
   border: none;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 .donate-btn:hover {
   opacity: 0.9;
@@ -28,3 +33,5 @@
   background-color: hsl(48, 93%, 53%) !important;
   border: none;
 }
+
+
